first calculation of score made on points of teams

--- a/src/main/resources/MatchStatistics.html
+++ b/src/main/resources/MatchStatistics.html
@@ -23,6 +23,6 @@
   </script>   
 </head>
 <body>
-  $team.getTeamName() won: $team.getWon() lost: $team.getLost() and draws:$team.getDraw()      
+  $home.getTeamName() vs $away.getTeamName() : $score      
 </body>
 </html>
